tests/baselines/reference/parser_breakTarget5.errors.txt
parser_breakTarget5.ts(5,7): error TS18055: Cannot find label 'target'.


==== parser_breakTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS18055: Cannot find label 'target'.
        }
      }
    }